<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ActivityAbout" >

        <TextView
            android:id="@+id/action_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/action_about"
            android:text="@string/aboutVersion" />

        <Button
            android:id="@+id/site_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewVersion"
            android:text="" />

        <TextView
            android:id="@+id/aboutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/site_url"
            android:text="@string/aboutMessageLabel" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/editTextMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aboutMessage"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/aboutCommentWrite"
            android:lines="5"
             />

        <Button
            android:id="@+id/aboutButtonSendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextMessage"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/aboutSendComment" />
    </RelativeLayout>

</ScrollView>