<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- <include -->
    <!-- android:id="@+id/navigation" -->
    <!-- layout="@layout/menu2" -->
    <!-- /> -->

    <TextView
        android:id="@+id/textViewCalendarNb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Blanc" />

    <TextView
        android:id="@+id/textViewCalendarComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCalendarNb"
        android:text="@string/please_select_calendar" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCalendarComment" />

    <Button
        android:id="@+id/buttonDisplayLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/list"
        android:text="@string/buttonDisplayLogs" />

</RelativeLayout>