<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="17dp"
              android:paddingRight="17dp"
        >
        
      <TextView
        android:id="@+id/labelLoginPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#CCC"
      	android:text="@string/labelLoginPrompt"
        />

    <EditText android:id="@+id/accountName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:hint="@string/accountName"
              android:inputType="textEmailAddress"
              android:padding="10dp"
            />

   
    <Button android:id="@+id/submitSignIn"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:text="@string/signIn"
              android:padding="10dp"/>

    

</LinearLayout>
