<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/logoPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="6dip"
        android:contentDescription="@+id/photo"
        android:src="@drawable/default_contact_logo" />

    <TextView
        android:id="@+id/labelContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/logoPhoto"
        android:singleLine="true"
        android:text="@+id/label"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/labelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelContact"
        android:layout_toRightOf="@+id/logoPhoto"
        android:singleLine="true"
        android:text="@string/labelCRM"
        android:textColor="#bbb"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/labelEditClientId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoPhoto"
        android:layout_centerInParent="true"
        android:singleLine="true"
        android:text="@string/labelEditClientId"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextClientId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelEditClientId"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/hintClientId"
        android:lines="1" />

    <Button
        android:id="@+id/buttonSetClientId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextClientId"
        android:text="@string/buttonSendForm" />

</RelativeLayout>