<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityImportContacts" >

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_import_events_crm_description" />

    <Button
        android:id="@+id/buttonChooseFile2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textDescription"
        android:text="@string/title_activity_choose_file"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonChooseFile2"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:inputType="textUri"
        android:text="http://cafe-crm.appspot.com/demo.csv"
         />

       <Button
        android:id="@+id/buttonFetchImportUrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUrl"
        android:text="@string/title_activity_choose_url"
        android:textSize="20sp" />
       
        <Button
        android:id="@+id/buttonHelpDemo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonFetchImportUrl"
        android:text="@string/title_button_help_demo"
        android:textSize="20sp" />
    
    
    <TextView
        android:id="@+id/textResultInsertEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonHelpDemo"
        android:text="" />

</RelativeLayout>