<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ActivityPreference3" >

    <include
        android:id="@+id/navigation"
        layout="@layout/menu2" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navigation"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navigation"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/labelEmail"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:text="@string/password"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/labelPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="30sp" />
    
     <TextView
        android:id="@+id/labelPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:text="@string/phrase_crypt"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/labelPhrase"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="30sp" />
    
    <Button 
        android:id="@+id/buttonSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/Save" 
        android:layout_below="@+id/editPhrase"
        />

</RelativeLayout>