<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/layoutConfirmSend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <include
            android:id="@+id/navigation"
            layout="@layout/menu2" />

        <TextView
            android:id="@+id/idConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/navigation"
            android:text="@string/confirmSend_confirm"
             />

        <TextView
            android:id="@+id/labelMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idConfirm"
            android:text="@string/activity_comment_contact"
            android:textSize="30sp" 
            />

        <TextView
            android:id="@+id/labelContact"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelMessage"
            android:layout_marginTop="10dp"
            android:text="@string/activity_comment_contact"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/labelNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelContact"
            android:layout_marginTop="10dp"
            android:text="@string/activity_comment_number"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/labelTime"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelNumber"
            android:text="@string/activity_comment_contact"
            />

        <TextView
            android:id="@+id/labelType"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelTime"
             android:text="@string/activity_comment_contact"
            />

        <TextView
            android:id="@+id/labelResult_R_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelType"
            android:text="" />

        <TextView
            android:id="@+id/labelResult_R_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelResult_R_1"
            android:text="" />

        <TextView
            android:id="@+id/labelResult_R_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelResult_R_2"
            android:text="" />

        <TextView
            android:id="@+id/labelResult_R_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelResult_R_3"
            android:text="" />

        <Button
            android:id="@+id/buttonCallAgain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelResult_R_4"
            android:text="@string/Call"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonAddReminder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonCallAgain"
            android:text="@string/AddReminderButton"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>