<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FragmentLogDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">


    <ImageView
        android:id="@+id/logoPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="6dip"
        android:src="@drawable/default_contact_logo"
        android:contentDescription="@+id/photo"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/logoPhotoText"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="6dip"
        android:textSize="70dp"
        android:text="B"
        android:background="#ff0000"
        />

    <TextView
        android:id="@+id/labelContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@+id/label"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/logoPhoto"
        android:singleLine="true"
        />


    <TextView
        android:id="@+id/labelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelContact"
        android:layout_toRightOf="@+id/logoPhoto"
        android:text="@string/labelCRM"
        android:textSize="14sp"
        android:textColor="#bbb"
        android:singleLine="true"
        />


    <Button
        android:id="@+id/buttonCRM___________________________________________xxxxxx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoPhoto"
        android:layout_marginRight="6dip"
        android:text="@string/labelCRM"
        android:singleLine="true"

        />
    <Button
        android:id="@+id/buttonFiltreCommentedOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoPhoto"
        android:layout_marginRight="6dip"
        android:text="@string/labeFiltreCommmnentedOnly"
        android:singleLine="true"
        />

    <Button
        android:id="@+id/buttonPhoneCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoPhoto"
        android:layout_toRightOf="@+id/buttonFiltreCommentedOnly"
        android:text="@string/Call"
        android:singleLine="true"
        />


    <Button
        android:id="@+id/buttonSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoPhoto"
        android:layout_toRightOf="@+id/buttonPhoneCall"

        android:text="@string/labelSendMessage"
        android:singleLine="true"
        />



    <TextView
        android:id="@+id/textViewClientId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonFiltreCommentedOnly"
        android:layout_toRightOf="@+id/buttonSendMessage"
        android:text=""
        android:textSize="12sp"
        android:textColor="#bbb"
        android:singleLine="true"
        />
    <Button
        android:id="@+id/buttonSearchContact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoPhoto"
        android:text="@string/buttonSearchContact"
        android:singleLine="true"
        android:textSize="12sp"
        android:visibility="gone"
        />


    <ListView
        android:id="@+id/listDetail0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonFiltreCommentedOnly" />



</RelativeLayout>